--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <!-- Services-->
 
-    <section class="page-section" id="services">
+    <section class="page-section" id="services"> 
         <div class="container px-4 px-lg-5">
             <h2 class="text-center mt-0">Services<br> </h2>
             <hr class="divider" />
@@ -141,16 +141,15 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
                                 <img src="assets/img/portfolio/services/1.jpg" width="200px" height="200px" alt="">
-                                <a href="">
+                                <a href="zigzac.html">
                                 <h3 class="h4 mb-2">SOLAR LED STREET LIGHT DRIVER</h3></a>
-                                <p class="text-muted mb-0">An LED street light is an integrated light that uses lightemitting
-                                    diodes (LED) as its light source.</p>
+                                <p class="text-muted mb-0">For lead acid/Lithium ion/Lithium ferrous phosphate battery.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/thumbnails/12.jpeg" width="200px" height="200px" alt="">
+                        <img src="assets/img/portfolio/services/2.2.jpg" width="150px" height="200px" alt="">
                         <h3 class="h4 mb-2">SOLAR LED STREET LIGHT</h3>
                         <p class="text-muted mb-0">LED street light is an integrated light that uses light emitting
                             diodes (LED) as its light source.</p>
@@ -159,8 +158,8 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/thumbnails/18.jpeg" width="200px" height="200px" alt="">
-                        <h3 class="h4 mb-2">Flood Light</h3>
+                        <img src="assets/img/portfolio/services/ac.jpg" width="150px" height="200px" alt="">
+                        <h3 class="h4 mb-2">AC LED STREET LIGHT</h3>
                         <p class="text-muted mb-0">LED flood light bulbs are highly popular for their ability to produce
                             glare free light.</p>
                     </div>
@@ -168,8 +167,54 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="assets/img/portfolio/services/integ.jpg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">INTEGRATED SOLAR STREET LIGHT</h3>
+                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
+                            pointing towards the ground, usually but not always used to light a highway.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
                         <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
-                        <h3 class="h4 mb-2">High Mast Light</h3>
+                        <h3 class="h4 mb-2">AC FLOOD LIGHT</h3>
+                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
+                            pointing towards the ground, usually but not always used to light a highway.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">SOLAR FLOOD LIGHT</h3>
+                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
+                            pointing towards the ground, usually but not always used to light a highway.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">HIGH-MAST LIGHT</h3>
+                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
+                            pointing towards the ground, usually but not always used to light a highway.</p>
+                    </div>
+                </div>
+                
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">SOLAR INTEGRATED LIGHT (chinese model)</h3>
+                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
+                            pointing towards the ground, usually but not always used to light a highway.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">EV(ELECTRONIC VEHICLE)</h3>
                         <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
                             pointing towards the ground, usually but not always used to light a highway.</p>
                     </div>
@@ -184,6 +229,7 @@
 
     <div class="newnew">
         <h2>Our Works</h2>
+        <hr class="divider" />
         <div class="pro-con">
             <div class="pro-bar" id="myBar"></div>
         </div>
