--- a/zigzac.html
+++ b/zigzac.html
@@ -71,8 +71,7 @@
   </div>
 </div>
 
-<!-- The App Section -->
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="column-66">
       <h1 class="xlarge-font"><b>SOLAR LED STREET LIGHT DRIVER</b></h1>
@@ -85,6 +84,6 @@
     </div>
   </div>
 </div>
-
+ -->
 </body>
 </html>
