--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
                                 <img src="assets/img/portfolio/services/1.jpg" width="200px" height="200px" alt="">
-                                <a href="zigzac.html">
+                                <a href="slsld.html">
                                 <h3 class="h4 mb-2">SOLAR LED STREET LIGHT DRIVER</h3></a>
                                 <p class="text-muted mb-0">For lead acid/Lithium ion/Lithium ferrous phosphate battery.</p>
                     </div>
@@ -149,7 +149,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/services/2.2.jpg" width="150px" height="200px" alt="">
+                        <img src="assets/img/portfolio/services/2/2.jpg" width="150px" height="200px" alt="">
                         <h3 class="h4 mb-2">SOLAR LED STREET LIGHT</h3>
                         <p class="text-muted mb-0">LED street light is an integrated light that uses light emitting
                             diodes (LED) as its light source.</p>
@@ -159,7 +159,26 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
                         <img src="assets/img/portfolio/services/ac.jpg" width="150px" height="200px" alt="">
-                        <h3 class="h4 mb-2">AC LED STREET LIGHT</h3>
+                        <a href="ac led sl.html"><h3 class="h4 mb-2">AC LED STREET LIGHT</h3></a>
+                        
+                        <p class="text-muted mb-0">ISb offers wide range of ac street ledd street light is ideal lighting up public
+                             space street highway with high quality material.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="assets/img/portfolio/services/integ.jpg" width="200px" height="200px" alt="">
+                        <a href="integreted.html"><h3 class="h4 mb-2">INTEGRATED SOLAR STREET LIGHT</h3></a>
+                        <p class="text-muted mb-0">ISB sollution offers new integrated solar led street light with some feature and 
+                            also need to negligible maintanance once installed.Due to compact design its easy to mounted on pole.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="assets/img/portfolio/services/flood/ac flood.jpg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">AC LED FLOOD LIGHT</h3>
                         <p class="text-muted mb-0">LED flood light bulbs are highly popular for their ability to produce
                             glare free light.</p>
                     </div>
@@ -167,34 +186,16 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/services/integ.jpg" width="200px" height="200px" alt="">
-                        <h3 class="h4 mb-2">INTEGRATED SOLAR STREET LIGHT</h3>
-                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
-                            pointing towards the ground, usually but not always used to light a highway.</p>
+                        <img src="assets/img/portfolio/services/solar led.jpg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">SOLAR LED FLOOD LIGHT</h3>
+                        <p class="text-muted mb-0">DC LED flood light bulbs are highly popular for their ability to produce
+                            glare free light.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
-                        <h3 class="h4 mb-2">AC FLOOD LIGHT</h3>
-                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
-                            pointing towards the ground, usually but not always used to light a highway.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
-                        <h3 class="h4 mb-2">SOLAR FLOOD LIGHT</h3>
-                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
-                            pointing towards the ground, usually but not always used to light a highway.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
+                        <img src="assets/img/portfolio/services/highmast.jpg" width="200px" height="200px" alt="">
                         <h3 class="h4 mb-2">HIGH-MAST LIGHT</h3>
                         <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
                             pointing towards the ground, usually but not always used to light a highway.</p>
@@ -204,19 +205,19 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
-                        <h3 class="h4 mb-2">SOLAR INTEGRATED LIGHT (chinese model)</h3>
-                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
-                            pointing towards the ground, usually but not always used to light a highway.</p>
+                        <img src="assets/img/portfolio/services/china.jpg" width="200px" height="200px" alt="">
+                        <a href="chines model.html"><h3 class="h4 mb-2">SOLAR INTEGRATED LIGHT (chinese model)</h3></a>
+                        <p class="text-muted mb-0">ISB sollution offers new integrated solar led street light with some feature and 
+                            also need to negligible maintanance once installed.Due to compact design its easy to mounted on pole.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                        <img src="assets/img/portfolio/thumbnails/8.jpeg" width="200px" height="200px" alt="">
+                        <img src="assets/img/portfolio/services/ev.jpg" width="200px" height="200px" alt="">
                         <h3 class="h4 mb-2">EV(ELECTRONIC VEHICLE)</h3>
-                        <p class="text-muted mb-0">High-mast lighting is a tall pole with lighting attached to the top
-                            pointing towards the ground, usually but not always used to light a highway.</p>
+                        <p class="text-muted mb-0">EV Infinite Solar Power Sollution is an 100% indian electric two wheeler manufacturing company
+                            with a mission to create two wheelers that can drive our present toward the sustainable future. </p>
                     </div>
                 </div>
             </div>
