--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                         <img src="assets/img/portfolio/services/2/2.jpg" width="150px" height="200px" alt="">
-                        <h3 class="h4 mb-2">SOLAR LED STREET LIGHT</h3>
+                        <a href="slsl.html">
+                        <h3 class="h4 mb-2">SOLAR LED STREET LIGHT</h3></a>
                         <p class="text-muted mb-0">LED street light is an integrated light that uses light emitting
                             diodes (LED) as its light source.</p>
                     </div>
