--- a/slsld.html
+++ b/slsld.html
@@ -70,20 +70,33 @@
     </div>
   </div>
 </div>
-
-<!-- <div class="container">
+<div class="container">
   <div class="row">
     <div class="column-66">
-      <h1 class="xlarge-font"><b>SOLAR LED STREET LIGHT DRIVER</b></h1>
-      <h1 class="large-font" style="color:rgb(252, 5, 5);"><b>Feature</b></h1>
-      <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      <button class="button">Download Application</button>
+      <h1 class="xlarge-font"><b>
+        ELECTRICAL PARAMETER</h1>
+      <h1 class="large-font" style="color:rgb(255, 0, 0);"><b>Feature</b></h1>
+      <p><span style="font-size:12px">
+        <ul class="w3-ul w3-card-4">        
+          <li>❖ Suitable for LED load : 5W to 20W .</li>
+          <li>❖ LED output voltage : 9V .</li>
+          <li>❖ Suitable Battery : Lead Acid, Li-ION, Life-po4 .</li>
+          <li>❖ Suitable solar panel : Up to 80W .</li>
+          <li>❖ LED driver efficiency : >92% .</li>
+          <li>❖ Size (L*B*H)mm : 60*45*40 .</li>
+          <li>❖ Operating Temperature : 0 to 85&#176;C .</li>
+          <li>❖ Dusk to Down : Available .</li>
+          <li>❖ Battery reverse current protection .</li>
+          <li>❖ PIR motion sensor interface : Available .</li>
+          <li>❖ No load Current Consumption : <10mA . </li>
+        </ul>
+    
     </div>
     <div class="column-33">
-        <img src="assets/img/portfolio/services/3.jpg" width="335" height="471" >
+        <img src="img/services/slsld/parameter.jpeg" width="345" height="771">
     </div>
   </div>
 </div>
- -->
+
 </body>
 </html>
