--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="index.html">Infinity Solar Power Solution</a>
+            <a class="navbar-brand" href="index.html">Infinite Solar Power Solution</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -38,16 +38,15 @@
         <div class="inner-container">
             <h1 class="head-1">About Us</h1>
             <p class="text">
-                Infinity Solar Power Solution is a leading solar solution provider in the Solar Industry in india.
-                The Company is ISO 9001 : 2015 Certificate, EC Certificate ,
-                MSME Certificate Holder & Udyog Aadhaar Registered company and in the business of manufacturing Solar
-                Street Light Luminaries, Solar Pump Controller, Solar Street Light System, Solar Pumping System and
-                Solar Power Plant.
+                Infinite Solar Power Solution is a leading solar solution provider in the Solar Industry in india.
+                The Company is ISO 9001 : 2015 Certeficate, CE Certeficate ,
+                MSME Certeficate Holder & Udyog Aadhaar Registered company and in the business of manufacturing Solar
+                Street Light Luminaries, Solar Pump Controller, Solar Street Light System,and Solar Power Plant.
 
                 At present, when the world is suffering from the problems of shortage in power, we have come out with
                 innovative solutions of solving the shortages by supplying a wide range of solar power products such as
-                solar panel , solar luminaries ,solar power plant , solar equipment, solar pump and solar pumping system
-                .We deal in marketing of the dsame in various part of west Bengal such as Murshidabad, Nadia, Birbhum,
+                solar panel , solar luminaries ,solar power plant , solar equipment,.We deal in marketing of the same 
+                in various part of India such as Murshidabad, Nadia, Birbhum,
                 Maldha and other districts, Assam, Tripura and other north eastern states,Jharkhand, Bihar and Orissa
                 etc. Our technical team always developing innovative products of solar power solutions ,which makes us
                 one of the best solar company in West Bengal and North eastern parts of India.
@@ -56,7 +55,18 @@
             <br>
             <h3>COMPANY PROFILE</h3><br>
             <p class="text">
-                Infinity Solar Power Solution IS A PROPRIETORSHIP company based in West Bengal, started journey in the year of 2017.
+                Infinite Solar Power Solution IS A PROPRIETORSHIP company based in India, started journey in the year of 2018.
+                Although, in the budding stage the company has proved its credentials by offering new products that
+                deliver high performance at low cost. Our products are there to stay and provide the best alternative to
+                conventional energy source .
+            </p>
+            <h3>MISSION</h3><br>
+            <p class="text">
+                We see a future where .
+            </p>
+            <h3>VISION</h3><br>
+            <p class="text">
+                Infinite Solar Power Solution IS A PROPRIETORSHIP company based in India, started journey in the year of 2018.
                 Although, in the budding stage the company has proved its credentials by offering new products that
                 deliver high performance at low cost. Our products are there to stay and provide the best alternative to
                 conventional energy source .
