--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Infinite Solar Power Solution</a>
+            <img class="logo" src="assets/img/icon/logo.jpeg" width="150px"><a class="navbar-brand" href="#page-top">Infinite Solar Power Solution</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -221,6 +221,33 @@
                             with a mission to create two wheelers that can drive our present toward the sustainable future. </p>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="img/services/lalten.jpeg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">SOLAR LANTERN</h3>
+                        <p class="text-muted mb-0">EV Infinite Solar Power Sollution is an 100% indian electric two wheeler manufacturing company
+                            with a mission to create two wheelers that can drive our present toward the sustainable future. </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="img/services/homelight.jpeg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">SOLAR HOME LIGHTING SYSTEM</h3>
+                        <p class="text-muted mb-0">EV Infinite Solar Power Sollution is an 100% indian electric two wheeler manufacturing company
+                            with a mission to create two wheelers that can drive our present toward the sustainable future. </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <img src="img/services/battery.jpeg" width="200px" height="200px" alt="">
+                        <h3 class="h4 mb-2">BATTERY</h3>
+                        <p class="text-muted mb-0">EV Infinite Solar Power Sollution is an 100% indian electric two wheeler manufacturing company
+                            with a mission to create two wheelers that can drive our present toward the sustainable future. </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -318,15 +345,14 @@
 
             <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                 <div class="ca-rd">
-                    <img class="faltu" src="assets\img\my.jpg" id="unique" alt="Avatar" style="width:60%">
+                    <img class="faltu" src="img/owner/owner.jpeg" id="unique" alt="Avatar" style="width:60%">
                     <div class="cont-ain"><br>
-                        <h4><b>Name</b></h4> <br>
+                        <h4><b>Raushan Aryan<br>(Founder & CEO)</b></h4> <br>
                         <span class="nowrap-set"><img src="assets/img/icon/email.png" width="20px">
-                            abc@gmail.com</span><br><br>
+                            infinitesolarpowersolutions@gmail.com</span><br><br>
                         <span class="nowrap-set"><img src="assets/img/icon/phone.png" width="20px">
-                            +919876543210</span><br><br>
-                        <span class="nowrap-set"><img src="assets/img/icon/location.png" width="20px"> Khoj sako to khoj
-                            lo ha ha ha</span>
+                            +918700564367 , +917042541591 </span><br><br>
+                        <span class="nowrap-set"><a href="https://maps.google.com/?q=28.679338,77.377612"><img src="assets/img/icon/location.png" width="20px"></a>&nbsp;plot No.12A street no.4 om nagar <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mohar nagar ghaziabad(201007)</span>
 
                     </div>
                 </div>
