--- a/about.html
+++ b/about.html
@@ -62,20 +62,20 @@
             </p>
             <h3>MISSION</h3><br>
             <p class="text">
-                We see a future where .
+                We see a future where:<br>
+                <b>1.</b> Indian will get this energy resources.<br>
+                <b>2.</b> Millions of home and commercial building cross the nation use solar energy.
             </p>
             <h3>VISION</h3><br>
             <p class="text">
-                Infinite Solar Power Solution IS A PROPRIETORSHIP company based in India, started journey in the year of 2018.
-                Although, in the budding stage the company has proved its credentials by offering new products that
-                deliver high performance at low cost. Our products are there to stay and provide the best alternative to
-                conventional energy source .
+                Our goal is to aling with the national energy policy and support a strengthened nation security by providing a 
+                stable, diverse domenstic energy supply to protect our future .
             </p>
-            <div class="skills">
+            <!-- <div class="skills">
                 <span>Web Design</span>
                 <span>Photoshop & Illustrator</span>
                 <span>Coding</span>
-            </div>
+            </div> -->
         </div>
     </div>
 
