--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 in various part of India such as Murshidabad, Nadia, Birbhum,
                 Maldha and other districts, Assam, Tripura and other north eastern states,Jharkhand, Bihar and Orissa
                 etc. Our technical team always developing innovative products of solar power solutions ,which makes us
-                one of the best solar company in West Bengal and North eastern parts of India.
+                one of the best solar company in UttarPradesh and many more part of India.
                 Our company provides an unique opportunity to individuals and businesses from all over eastern India .
             </p>
             <br>
