--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 <div class="col-lg-4 text-center mb-5 mb-lg-0">
                     <i class="bi-phone fs-2 mb-3 text-muted"></i>
                     <h2 class='change-color'>Feel free to contact us.</h2>
-                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="https://www.facebook.com/infinitesolarpowersolutions/" class="fa fa-facebook"></a>
                     <a href="#" class="fa fa-linkedin"></a>
                     <a href="#" class="fa fa-instagram"></a>
                 </div>
