--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <img class="logo" src="assets/img/icon/logo.jpeg" width="150px"><a class="navbar-brand" href="#page-top">Infinite Solar Power Solution</a>
+            <img class="logo" src="assets/img/icon/logo.jpeg" width="150px"><a class="navbar-brand" href="#page-top">&nbsp;Infinite Solar Power Solution</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -37,8 +37,9 @@
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Our Products</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Our Products</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Certificates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#ourwork">Our Works</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -116,13 +117,13 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">We've got what you need!</h2>
                     <hr class="divider divider-light" />
-                    <p class="text-white-75 mb-4">Infinite Solar Power Solution is based solar company located in Uttar
+                    <p class="text-white-75 mb-4"><b> Solar Power Solution is based solar company located in Uttar
                         Pradesh India specially dedicated to design,
                         engineering, manufacturer, and supply of complete solar street light solutions.
                         We provide world-class solar street light designs as per customer’s requirements in all cities
                         of India.
                         Infinite Solar Power Solution is a leading solar street light manufacturing company with all
-                        mandatory certificates and over 40 employees, two manufacturing units in India.</p>
+                        mandatory certificates and over 40 employees, two manufacturing units in India.</b></p>
                     <a class="btn btn-light btn-xl" href="about.html">Know More About Us!</a>
                 </div>
             </div>
@@ -255,7 +256,7 @@
 
     <!-- Portfolio-->
 
-
+<div id="ourwork">
     <div class="newnew">
         <h2>Our Works</h2>
         <hr class="divider" />
@@ -263,61 +264,62 @@
             <div class="pro-bar" id="myBar"></div>
         </div>
     </div>
-    <div id="portfolio">
+</div>
+    <div>
         <div class="container-fluid p-0">
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/jp1.jpeg" title="">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/jp1.jpeg" alt="..." />
-                        <div class="portfolio-box-caption">
+                        <!-- <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
-                        </div>
+                        </div> -->
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/jp2.jpeg" title="">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/jp2.jpeg" alt="..." />
-                        <div class="portfolio-box-caption">
+                        <!-- <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
-                        </div>
+                        </div> -->
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/20.jpeg" title="">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/20.jpeg" alt="..." />
-                        <div class="portfolio-box-caption">
+                        <!-- <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
-                        </div>
+                        </div> -->
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/22.jpeg" title="">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/22.jpeg" alt="..." />
-                        <div class="portfolio-box-caption">
+                        <!-- <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
-                        </div>
+                        </div> -->
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/jp5.jpeg" title="">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/jp5.jpeg" alt="..." />
-                        <div class="portfolio-box-caption">
+                        <!-- <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
-                        </div>
+                        </div> -->
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/12.jpeg" title="">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/12.jpeg" alt="..." />
-                        <div class="portfolio-box-caption">
+                        <!-- <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
-                        </div>
+                        </div> -->
                     </a>
                 </div>
 
@@ -345,14 +347,14 @@
 
             <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                 <div class="ca-rd">
-                    <img class="faltu" src="img/owner/owner.jpeg" id="unique" alt="Avatar" style="width:60%">
+                    <img class="faltu" src="img/owner/owner.jpeg" id="unique" alt="Avatar" style="width:65%" padding-top="5px">
                     <div class="cont-ain"><br>
                         <h4><b>Raushan Aryan<br>(Founder & CEO)</b></h4> <br>
                         <span class="nowrap-set"><img src="assets/img/icon/email.png" width="20px">
                             infinitesolarpowersolutions@gmail.com</span><br><br>
                         <span class="nowrap-set"><img src="assets/img/icon/phone.png" width="20px">
                             +918700564367 , +917042541591 </span><br><br>
-                        <span class="nowrap-set"><a href="https://maps.google.com/?q=28.679338,77.377612"><img src="assets/img/icon/location.png" width="20px"></a>&nbsp;plot No.12A street no.4 om nagar <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mohar nagar ghaziabad(201007)</span>
+                        <span class="nowrap-set"><a href="https://maps.google.com/?q=28.679338,77.377612"><img src="assets/img/icon/location.png" width="20px"></a>&nbsp;plot No.81 first floor, rajendra nagar <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; industrial area, mohar nagar ghaziabad.</span>
 
                     </div>
                 </div>
@@ -467,6 +469,11 @@
     </script>
 
 
+<script type="text/javascript">
+    function view(imgsrc) {
+       viewwin = window.open(imgsrc,'viewwin', 'width=600,height=300'); 
+    }
+</script>
 
 </body>
 
